Add Slumbot interface